@@ -9,6 +9,8 @@ NOT BE PRESENT IN THE STABLE BRANCH
 For details of when a commit makes it into the stable branch see the ReleaseNotes file.
 
 
+2017-01-20 DariusIII
+	Fix: Change leftover references to group_id in python scripts and ProcessReleases class
 2017-01-19 niel
 	Chg: Replace nzedb\Groups::getByID array with app\model\Groups::findByID() object.
 2017-01-17 niel
